container/deploy-in-minikube/frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:0.0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
